# numerictester

./: CMakeLists.txt  accurate_math.hpp  dotprod.cpp  genericfp.hpp  kobbelt.hpp  mpreal.h  numerictester.cpp  numerictester.hpp  quad.cpp  test.cpp
